# ringsort

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  tests.yml
docs/: usage.md
examples/Code/: basic.sh
src/organizer/: __init__.py  categories.py  logger.py  main.py  mover.py  scanner.py  utils.py
src/ringsort/: __init__.py  categories.py  cli.py  config.py  duplicates.py  logger.py  mover.py  scanner.py
tests/: conftest.py  test_categories.py  test_cli.py  test_duplicates.py  test_mover.py  test_scanner.py
